backend/minio/ingress-admin.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: minio-admin
  annotations:
    avp.kubernetes.io/path: "kv/data/argocd"
    nginx.ingress.kubernetes.io/proxy-body-size: "0"
    nginx.ingress.kubernetes.io/backend-protocol: HTTP
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
    nginx.ingress.kubernetes.io/ssl-passthrough: "false"
    nginx.ingress.kubernetes.io/whitelist-source-range: 192.168.0.0/16,10.0.0.0/8
    cert-manager.io/cluster-issuer: letsencrypt-production
    # Get Homepage configuration
    gethomepage.dev/enabled: "true"
    gethomepage.dev/description: S3-compatible object storage
    gethomepage.dev/group: Global
    gethomepage.dev/icon: minio.png
    gethomepage.dev/name: Minio
    gethomepage.dev/pod-selector: app=minio
spec:
  ingressClassName: nginx
  rules:
  - host: minio-admin.<homelab-domain>
    http:
      paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: minio
              port:
                number: 9090
  tls:
    - hosts:
      - minio-admin.<homelab-domain>
      secretName: "minio-admin.<homelab-domain>-cert"
